[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/substrate",
    "crates/storage",
    "crates/graphql",
    "crates/handlers",
    "bin/maestro"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Allfeat <hello@allfeat.com>"]
license = "Apache-2.0"
repository = "https://github.com/allfeat/maestro"
homepage = "https://allfeat.org"
description = "A high-performance Substrate blockchain indexer"
keywords = ["substrate", "blockchain", "indexer", "polkadot", "graphql"]
categories = ["database", "web-programming"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Substrate
subxt = { version = "0.44" }
codec = { package = "parity-scale-codec", version = "3.7.5", features = ["derive"] }
scale-info = { version = "2.11.6", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7.0"

# Web framework
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
hex = "0.4"
parking_lot = "0.12"
dashmap = "6.1"
url = "2.5"

# Internal crates
maestro-core = { path = "crates/core" }
maestro-substrate = { path = "crates/substrate" }
maestro-storage = { path = "crates/storage" }
maestro-graphql = { path = "crates/graphql" }
maestro-handlers = { path = "crates/handlers" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
